# Vox

./: .gitattributes  .gitignore  CHANGELIST.md  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  TODO.md  Vox.vcxproj  Vox.vcxproj.filters  circle.yml
logs/media/shaders/: dummy.txt
media/config/: mods.ini  options.ini  settings.ini
media/gamedata/particles/: anvil_hit.effect  camp_fire.effect  combat_hit.effect  furnace_fire.effect
media/gamedata/quests/: A_Simple_Collection.quest
media/shaders/: cube_map.vertex  default.pixel  default.vertex  instance.pixel  instance.vertex  paperdoll.pixel  shadow.pixel  water_still.pixel  water_still.vertex
media/shaders/fullscreen/: SSAO.pixel  SSAO.vertex  blur_horizontal.pixel  blur_horizontal.vertex  blur_vertical.pixel  blur_vertical.vertex  fxaa.pixel  lighting.pixel  lighting.vertex  transparency.pixel  transparency.vertex
media/textures/items/: book.tga  cloth_boots.tga  (+2 more)
project/: Vox.vcxproj  Vox.vcxproj.filters
project/2012/: Vox.sln  Vox.vcxproj  Vox.vcxproj.filters
project/2013/: Vox.sln  Vox.vcxproj  Vox.vcxproj.filters
project/2015/: Vox.sln  Vox.vcxproj  Vox.vcxproj.filters
project/linux/: Vox.cbp  Vox.depend  Vox.layout
source/: CMakeLists.txt  VoxApplication.cpp  VoxApplication.h  VoxCamera.cpp  VoxControls.cpp  VoxGUI.cpp  VoxGame.cpp  VoxGame.h  VoxInput.cpp  VoxRender.cpp  VoxSettings.cpp  VoxSettings.h  VoxUpdate.cpp  VoxWindow.cpp  VoxWindow.h  input.cpp  main.cpp  render.cpp  setup.cpp  update.cpp
source/AudioManager/: AudioManager.cpp  AudioManager.h  CMakeLists.txt  SoundEffects.cpp  SoundEffectsEnum.h
source/Enemy/: CMakeLists.txt  Enemy.cpp  Enemy.h  EnemyManager.cpp  EnemyManager.h  EnemySpawner.cpp  EnemySpawner.h
source/GameGUI/: ActionBar.cpp  ActionBar.h  CMakeLists.txt  CharacterGUI.cpp  CharacterGUI.h  CraftingGUI.cpp  CraftingGUI.h  HUD.cpp  HUD.h  InventoryGUI.cpp  InventoryGUI.h  LootGUI.cpp  LootGUI.h  QuestGUI.cpp  QuestGUI.h
source/Instance/: CMakeLists.txt  InstanceManager.cpp  InstanceManager.h
source/Inventory/: CMakeLists.txt  InventoryManager.cpp  InventoryManager.h
source/Items/: CMakeLists.txt  EquipmentEnum.h  EquipmentUtils.cpp  Item.cpp  Item.h  ItemManager.cpp  ItemManager.h  ItemSpawner.cpp  ItemSpawner.h  ItemUtils.cpp  ItemsEnum.h  RandomLootManager.cpp  RandomLootManager.h  StatAttribute.cpp  StatAttribute.h
source/Lighting/: CMakeLists.txt  DynamicLight.cpp  DynamicLight.h  LightingManager.cpp  LightingManager.h
source/Maths/: 3dGeometry.h  3dmaths.cpp  3dmaths.h  Bezier3.cpp  Bezier4.cpp  BoundingRegion.h  CMakeLists.txt  Line3D.cpp  Plane3D.cpp  matrix3x3.cpp  matrix4x4.cpp  quaternion.cpp  vector3d.cpp
source/Mods/: CMakeLists.txt  ModsManager.cpp  ModsManager.h
source/NPC/: CMakeLists.txt  NPC.cpp  NPC.h  NPCManager.cpp  NPCManager.h
source/Particles/: BlockParticle.cpp  BlockParticle.h  BlockParticleEffect.cpp  BlockParticleEffect.h  BlockParticleEmitter.cpp  BlockParticleEmitter.h  BlockParticleManager.cpp  BlockParticleManager.h  CMakeLists.txt
source/Player/: CMakeLists.txt  Player.cpp  Player.h  PlayerCombat.cpp  PlayerStats.cpp  PlayerStats.h
source/Projectile/: CMakeLists.txt  Projectile.cpp  Projectile.h  ProjectileManager.cpp  ProjectileManager.h
source/Quests/: CMakeLists.txt  Quest.cpp  Quest.h  QuestJournal.cpp  QuestManager.cpp
source/Renderer/: CMakeLists.txt  Renderer.cpp  Renderer.h  camera.cpp  camera.h  colour.cpp  colour.h  framebuffer.h  frustum.cpp  frustum.h  glsl.cpp  glsl.h  light.h  mesh.cpp  texture.cpp  texture.h
source/Skybox/: CMakeLists.txt  Skybox.cpp  Skybox.h
source/TextEffects/: AnimatedText.cpp  AnimatedText.h  CMakeLists.txt  TextEffectsManager.cpp  TextEffectsManager.h
source/blocks/: BiomeManager.cpp  BiomeManager.h  CMakeLists.txt  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h
source/freetype/: freetypefont.cpp  freetypefont.h
source/freetype/libs/: freetype237.lib  freetype261_64.lib  freetype261d_64.lib
source/freetype/libs/2012/: freetype261d.lib  freetype261d_64.lib
source/freetype/libs/2013/: freetype261.lib  freetype261_64.lib  freetype261d.lib  freetype261d_64.lib
source/freetype/libs/2015/: freetype261.lib
source/frontend/: CMakeLists.txt  FrontendManager.cpp  FrontendManager.h  FrontendPage.cpp  FrontendPage.h  FrontendScreens.h
source/frontend/Pages/: CreateCharacter.cpp  CreateCharacter.h  Credits.cpp  Credits.h  MainMenu.cpp  MainMenu.h  ModMenu.cpp  ModMenu.h  OptionsMenu.cpp  OptionsMenu.h  PauseMenu.cpp  PauseMenu.h  QuitPopup.cpp  QuitPopup.h  SelectCharacter.cpp  SelectCharacter.h
source/glfw/libs/2013/d/: glfw3.lib  glfw3_64.lib
source/glfw/libs/2013/r/: glfw3.lib  glfw3_64.lib
source/glfw/libs/2015/d/: glfw3.lib
source/glfw/libs/2015/r/: glfw3.lib  glfw3_64.lib
source/glfw/libs/d/: glfw3_64.lib
source/gui/: CMakeLists.txt  TreeView.cpp  abstractbutton.cpp  abstractbutton.h  button.cpp  button.h  checkbox.cpp  checkbox.h  component.cpp  component.h  container.cpp  container.h  dimensions.cpp  dimensions.h  directdrawrectangle.cpp  directdrawrectangle.h  draggablerenderrectangle.cpp  draggablerenderrectangle.h  event.cpp  event.h  eventlistener.cpp  eventlistener.h  focusevent.cpp  focusevent.h  focuslistener.cpp  focuslistener.h  focusmanager.cpp  focusmanager.h  formattedlabel.cpp  formattedlabel.h  guiwindow.cpp  guiwindow.h  guiwindowclosebutton.cpp  guiwindowclosebutton.h  guiwindowminimizebutton.cpp  guiwindowminimizebutton.h  icon.cpp  icon.h  keyevent.cpp  keyevent.h  (+43 more)
source/models/: CMakeLists.txt  MS3DAnimator.cpp  MS3DAnimator.h  MS3DModel.cpp  QubicleBinary.cpp  QubicleBinary.h  QubicleBinaryManager.cpp  QubicleBinaryManager.h  VoxelCharacter.cpp  VoxelCharacter.h  VoxelObject.cpp  VoxelObject.h  VoxelWeapon.cpp  VoxelWeapon.h  objmodel.cpp
source/scenery/: CMakeLists.txt  SceneryManager.cpp  SceneryManager.h
source/simplex/: CMakeLists.txt
source/utils/: CMakeLists.txt  CountdownTimer.cpp  CountdownTimer.h  FileUtils.cpp  FileUtils.h  Interpolator.cpp  Interpolator.h  Random.h  TimeManager.cpp  TimeManager.h
(+154 files in other folders)
